@@ -1,3 +1,7 @@
+2006-11-28  Matt Johnston  <matt@ucc.asn.au>
+
+	* restrictions.cc: limit some verbose debugging that slows "log <file>"
+
 2006-11-22  Patrick Mauritz  <oxygene@studentenbude.ath.cx>
 
 	* rev_height.cc: add memcmp to global namespace for sunpro.
